[tool.poetry]
name = "randomsticker"
version = "0.1.0"
description = ""
authors = ["istimaldar <istimaldar@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9.1"
Telethon = "^1.19.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
